# language-telegram-bot

./: .env.template  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
ansible/: deploy.yml
ansible/group_vars/: all.yaml
app/: main.py
app/templates/: definition_message.j2  video_message.j2
