[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Ключников Андрей <andrey.klyuchnikov@osinit.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
